<resources>
    <string name="app_name">UntacTable</string>

    <string name="timetable_title">내 시간표</string>

    <string name="classItem_context_move">이동</string>
    <string name="classItem_context_edit">수정</string>
    <string name="classItem_context_remove">삭제</string>

    <string name="cancel">취소</string>
    <string name="confirm">확인</string>

    <string name="title_hint">과목명</string>
    <string name="prof_hint">교수</string>
    <string name="uri_hint">WebEx 주소</string>

    <string name="time_place_add">시간 / 장소 추가</string>
    <string name="time_place_remove">제거</string>
    <string name="place_hint">장소</string>

    <string name="default_weekday">월요일</string>
    <string name="default_start_time">09:00</string>
    <string name="default_end_time">10:00</string>
    <string name="timetable_edit_title">Timetable Edit Title</string>
    <string name="search_class_title">과목 검색</string>
    <string name="search_data_hint">과목이름</string>

    <string name="alarm_on_off_switch_text">알람</string>
    <string name="alarm_vibe_switch_text">진동</string>
    <string name="alarm_sound_switch_text">소리</string>
    <string name="alarm_time_text">5분전 알림</string>




    <string-array name="weekdays">
        <item>월요일</item>
        <item>화요일</item>
        <item>수요일</item>
        <item>목요일</item>
        <item>금요일</item>
        <item>토요일</item>
    </string-array>

    <string-array name="default_header_title">
        <item> </item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
    </string-array>



</resources>