<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/edit_class_main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timetable_edit_title"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="1dp"
            >

            <EditText
                android:id="@+id/edit_class_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_border"
                android:inputType="text"
                android:hint="@string/title_hint"
                android:textSize="24sp"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/edit_class_prof"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/edit_class_prof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/item_border"
                android:inputType="text"
                android:hint="@string/prof_hint"
                android:textSize="24sp"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/edit_class_uri"/>

            <EditText
                android:id="@+id/edit_class_uri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/item_border"
                android:inputType="textUri"
                android:hint="@string/uri_hint"
                android:textSize="24sp"
                android:imeOptions="actionDone"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_place_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_add_time_place_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_place_add"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/alarm_on_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarm_on_off_switch_text"
                android:textSize="24sp"
                android:background="@drawable/item_border"
                android:layout_margin="3dp"
                android:checked="false"
                />

            <ToggleButton
                android:id="@+id/vibe_toggle_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOn="@string/alarm_vibe_switch_text"
                android:textOff="@string/alarm_sound_switch_text"
                android:checked="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                />

            <NumberPicker
                android:id="@+id/alarm_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"

                />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/edit_button_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/edit_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:textColor="#f07777"/>
            <Button
                android:id="@+id/edit_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:layout_weight="1"
                android:textColor="#7777f0"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>