<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:orientation="horizontal"
    android:background="@drawable/item_border">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/time_container"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/button_weekday_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:entries="@array/weekdays"
                android:spinnerMode="dialog"
                />

            <Button
                android:id="@+id/time_set_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_start_time"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                />

            <Button
                android:id="@+id/time_set_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/default_end_time"
                android:gravity="center"/>

        </LinearLayout>

        <EditText
            android:id="@+id/place_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/time_container"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:background="@drawable/item_border"
            android:inputType="text"
            android:layout_margin="5dp"
            android:hint="@string/place_hint"
            android:imeOptions="actionDone"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="4">
        <Button
            android:id="@+id/button_remove_time_place"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#fe5555"
            android:text="@string/time_place_remove"
            android:layout_marginEnd="3dp"/>
    </LinearLayout>



</LinearLayout>